# SlimeVR-Tracker-NRF52-Receiver

./: .gitignore  CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf
boards/: xiao_ble.overlay
include/: common.h  connectionManager.h  defines.h  echo_server.h
src/: connectionManagement.c  connectionManagement.cpp  connectionManagement.h  connectionManagement.hpp  connectionManager.c  connectionManager.h  echo_server.c  main.c  udp.c  usb.c
